# VATS

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  CONTRIBUTING.md  HunterAP_Common.py  HunterAP_Logger.py  HunterAP_Proc_Scheduler.py  HunterAP_Process_Handler.py  Pipfile  README.md  TODO.md  base.txt  config.ini  config_handler.py  config_reader.py  ffmpy_handler.py  file_handler.py  file_reader.py  gooey_test.py  plot_vmaf.py  pyoxidizer.bzl  pyproject.toml  report_handler.py  report_reader.py  requirements-dev.txt  requirements.txt  setup.cfg  vmaf_calculate.py  vmaf_calculator.py  vmaf_calculator_old.py  vmaf_common.py  vmaf_config_handler.py  vmaf_file_handler.py  vmaf_log_handler.py  vmaf_plot.py  vmaf_plotter.py  vmaf_report_handler.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature-addition.md  feature_request.md
.github/workflows/: black.yml  codeql-analysis.yml  lint.yml
report_examples/: vmaf_v1.csv  vmaf_v1.json  vmaf_v1.xml  vmaf_v2.csv  vmaf_v2.json  vmaf_v2.xml
src/: Comparitor.py  HunterAP_Logger.py  VATS.py  VATS2.py  VATS_Common.py  VATS_Encodings.py  VATS_MainWindow.py  ffmpeg_parser.py  ffmpy_handler.py  gpu_test.py  vmaf_calculator.py  vmaf_common.py  vmaf_config_handler.py  vmaf_encoder.py  vmaf_file_handler.py  vmaf_logger.py  vmaf_plotter.py  vmaf_report_handler.py
